fix: z-index

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -836,6 +836,7 @@ li
   top: 80px
   right: 10px
   margin-left: 10px
+  z-index: 10
 
 @media (max-width: 768px)
   #wrapper.toggled #sidebar-wrapper
